# device_manager

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
devices_manager/: db.sqlite3  manage.py
devices_manager/apps/: __init__.py
devices_manager/apps/authentication/: __init__.py  apps.py  backends.py  serializers.py  tests.py  urls.py  views.py
devices_manager/apps/authentication/tests/: test_login.py  test_register.py
devices_manager/apps/core/: __init__.py  apps.py  models.py  tests.py
devices_manager/apps/devices/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
devices_manager/apps/devices/migrations/: 0001_initial.py  0002_alter_device_created_by_alter_device_updated_by.py
devices_manager/apps/devices/tests/: __init__.py  test_create_device.py  test_delete_device.py  test_get_device.py  test_list_devices.py  test_my_devices.py  test_toggle_active.py  test_update_device.py
devices_manager/devices_manager/: asgi.py  urls.py  wsgi.py
devices_manager/devices_manager/settings/: __init__.py  base.py  dev.py  prod.py
postman/: Devices_Manager_API.postman_collection.json
